--- a/index.html
+++ b/index.html
@@ -28,21 +28,43 @@
     <link rel="stylesheet" href="./code/css/index.css">
 </head>
 <body>
+    <div class="menu active">
+        <ul>
+            <li><a href="#cr7">CR7</a></li>
+            <li><a href="#slider">CAREER HIGHLIGHTS</a></li>
+            <li><a href="#video">#ORIGINS</a></li>
+            <li><a href="#subscription">NEWSLETTER</a></li>
+            <li><a href="#partners">PARTNERS</a></li>
+        </ul>
+        <div class="footer">
+            <a href="">PRIVACY POLICY</a>
+            <div class="redes">
+                <a href=""><svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><path class="social-icon__icon" d="M9 0c2.444 0 2.75.01 3.71.054.959.044 1.613.196 2.185.419.592.23 1.094.537 1.594 1.038.5.5.809 1.002 1.039 1.594.222.572.374 1.226.418 2.184C17.99 6.25 18 6.556 18 9s-.01 2.75-.054 3.71c-.044.959-.196 1.613-.418 2.185a4.412 4.412 0 0 1-1.039 1.594c-.5.5-1.002.809-1.594 1.039-.572.222-1.226.374-2.184.418C11.75 17.99 11.444 18 9 18s-2.75-.01-3.71-.054c-.959-.044-1.613-.196-2.185-.418a4.412 4.412 0 0 1-1.594-1.039c-.5-.5-.809-1.002-1.038-1.594-.223-.572-.375-1.226-.419-2.184C.01 11.75 0 11.444 0 9s.01-2.75.054-3.71C.098 4.33.25 3.676.473 3.104A4.411 4.411 0 0 1 1.51 1.51c.5-.5 1.002-.809 1.594-1.038C3.677.25 4.33.098 5.289.054 6.25.01 6.556 0 9 0zm0 1.622c-2.403 0-2.688.009-3.637.052-.877.04-1.354.187-1.67.31-.421.163-.72.358-1.036.673-.315.315-.51.615-.673 1.035-.123.317-.27.794-.31 1.671-.043.95-.052 1.234-.052 3.637s.009 2.688.052 3.637c.04.877.187 1.354.31 1.67.163.421.358.72.673 1.036.315.315.615.51 1.035.673.317.123.794.27 1.671.31.95.043 1.234.052 3.637.052s2.688-.009 3.637-.052c.877-.04 1.354-.187 1.67-.31.421-.163.72-.358 1.036-.673.315-.315.51-.615.673-1.035.123-.317.27-.794.31-1.671.043-.95.052-1.234.052-3.637s-.009-2.688-.052-3.637c-.04-.877-.187-1.354-.31-1.67a2.788 2.788 0 0 0-.673-1.036 2.788 2.788 0 0 0-1.035-.673c-.317-.123-.794-.27-1.671-.31-.95-.043-1.234-.052-3.637-.052zm0 2.756a4.622 4.622 0 1 1 0 9.244 4.622 4.622 0 0 1 0-9.244zM9 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm5.884-7.804a1.08 1.08 0 1 1-2.16 0 1.08 1.08 0 0 1 2.16 0z" fill="#B2ACA4" fill-rule="evenodd"></path></svg></a>
+                <a href=""><svg width="9" height="17" xmlns="http://www.w3.org/2000/svg"><path class="social-icon__icon" d="M5.842 17V9.245h2.653l.398-3.022H5.842V4.294c0-.875.248-1.471 1.527-1.471H9V.118C8.718.082 7.75 0 6.623 0 4.27 0 2.66 1.408 2.66 3.995v2.228H0v3.022h2.66V17h3.182z" fill="#B2ACA4" fill-rule="evenodd"></path></svg></a>
+                <a href=""><svg width="18" height="15" xmlns="http://www.w3.org/2000/svg"><path class="social-icon__icon" d="M18 1.776a7.213 7.213 0 0 1-2.12.596A3.778 3.778 0 0 0 17.503.277a7.273 7.273 0 0 1-2.346.918A3.642 3.642 0 0 0 12.462 0C10.424 0 8.77 1.696 8.77 3.787c0 .296.032.585.095.862-3.069-.158-5.79-1.664-7.612-3.958a3.856 3.856 0 0 0-.5 1.906c0 1.313.652 2.472 1.643 3.152a3.626 3.626 0 0 1-1.673-.473v.047c0 1.835 1.273 3.366 2.963 3.713-.31.089-.636.133-.973.133-.238 0-.47-.023-.695-.067.47 1.504 1.833 2.599 3.45 2.628A7.292 7.292 0 0 1 0 13.3 10.282 10.282 0 0 0 5.66 15c6.794 0 10.508-5.77 10.508-10.774 0-.164-.003-.329-.01-.49A7.58 7.58 0 0 0 18 1.776" fill="#B2ACA4" fill-rule="evenodd"></path></svg></a>
+            </div>
+        </div>
+    </div>
     <header>
         <h1><img src="./rg/svg/cr7.svg" alt="logo"></h1>
         <ul>
-            <li><a class="active" href="#">CR7</a></li>
-            <li><a href="#">CAREER HIGHLIGHTS</a></li>
-            <li><a href="#">#ORIGINS</a></li>
-            <li><a href="#">NEWSLETTER</a></li>
-            <li><a href="#">PARTNERS</a></li>
+            <li><a class="active" href="#cr7">CR7</a></li>
+            <li><a href="#slider">CAREER HIGHLIGHTS</a></li>
+            <li><a href="#video">#ORIGINS</a></li>
+            <li><a href="#subscription">NEWSLETTER</a></li>
+            <li><a href="#partners">PARTNERS</a></li>
         </ul>
+        <button class="nav-toggle">
+            <span class="first"></span>
+            <span class="second"></span>
+        </button>
     </header>
 
     <main>
-        <section class="cr7">
+        <section class="cr7" id="cr7">
             <div class="container">
                 <div class="box">
+                    <video src="./rg/videos/CR7_WebsiteHighlights-Carrousel.mp4" autoplay muted loop></video>
                     <div>
                         <p>CAREER <span>Highlights</span></p>
                         <p>Cristiano Ronaldo's highlights and achievements.</p>
@@ -84,26 +106,32 @@
             </div>
         </section>
 
-        <section class="slider">
+        <section class="slider" id="slider">
+            <p>Career Highlights</p>
             <div class="sliderMove">
                 <div>
-                    <video>
-                        <source src="./rg/videos/Cristiano Ronaldo bicycle kick vs Juventus _ CL season 17_18 _ 4K ULTRA HD _.mp4"/>
+                    <video autoplay muted loop>
+                        <source src="./rg/videos/CR7_WebsiteHighlights-Juventus_desktop.mp4" type="video/mp4"/>
                     </video>
                 </div>
                 <div>
-                    <video>
-                        <source src="./rg/videos/Cristiano Ronaldo bicycle kick vs Juventus _ CL season 17_18 _ 4K ULTRA HD _.mp4"/>
+                    <video autoplay muted loop>
+                        <source src="./rg/videos/CR7_WebsiteHighlights-ManUtd_desktop.mp4" type="video/mp4"/>
                     </video>
                 </div>
                 <div>
-                    <video>
-                        <source src="./rg/videos/Cristiano Ronaldo bicycle kick vs Juventus _ CL season 17_18 _ 4K ULTRA HD _.mp4"/>
+                    <video autoplay muted loop>
+                        <source src="./rg/videos/CR7_WebsiteHighlights-Portugal_desktop.mp4" type="video/mp4"/>
                     </video>
                 </div>
                 <div>
-                    <video>
-                        <source src="./rg/videos/Cristiano Ronaldo bicycle kick vs Juventus _ CL season 17_18 _ 4K ULTRA HD _.mp4"/>
+                    <video autoplay muted loop>
+                        <source src="./rg/videos/CR7_WebsiteHighlights-RealMadrid_desktop.mp4" type="video/mp4"/>
+                    </video>
+                </div>
+                <div>
+                    <video autoplay muted loop>
+                        <source src="./rg/videos/CR7_WebsiteHighlights-ManUtd_desktop.mp4" type="video/mp4"/>
                     </video>
                 </div>
             </div>
@@ -112,13 +140,14 @@
                 <div></div>
                 <div></div>
                 <div></div>
+                <div></div>
             </div>
         </section>
 
-        <section class="video">
+        <section class="video" id="video">
             <p>#origins</p>
             <video >
-                <source src="./rg/videos/Trailer Oficial - Gotham Knights - Español Latino. (2).mp4" type="video/mp4"/>
+                <source src="./rg/videos/cr7_origins.webm" />
             </video>
             <img src="./rg/svg/play.svg" alt="play">
             <span></span>
@@ -126,7 +155,7 @@
             <span></span>
         </section>
 
-        <section class="subscription">
+        <section class="subscription" id="subscription">
             <div class="text">
                 <h2>STAY TUNED</h2>
                 <p>Subscribe my newsletter and don’t miss any update on new products, promotions or even career events.</p>
@@ -144,7 +173,7 @@
             </div>
         </section>
 
-        <section class="partners">
+        <section class="partners" id="partners">
             <h2>I WORK WITH BRANDS I <span>BELIEVE</span> IN</h2>
             <div class="partners-grid">
                 <div>
@@ -254,4 +283,6 @@
 </body>
 <script src="./code/scripts/index.js"></script>
 <script src="./code/scripts/slider.js"></script>
+<script src="./code/scripts/header.js"></script>
+<script src="./code/scripts/menu.js"></script>
 </html>
